IMPROVEMENTS / FIXES
- AI / WM:
	- Improvements to the Orbital AI
		- PID control option available, by default is active only during weapon firing, can be toggled to be active always or never active.
		- Improved maneuvering behavior, it is now better at intercepting targets, killing velocity, and prioritizes combat over minor orbital corrections when within combat range.
		- Add option to set which side of the ship AI will present toward target using roll control (only active when PID is enabled).
		- AI now properly aims and fires unguided missiles in orbit.
	- Fix weapon types with no targeting type (i.e. AIR-2) not firing within engage range.
- UI:
	- Updated Chinese localization thanks to user Marv1n-M.
- Weapons
	- Missiles:
		- Change missile drop time increment from 0.5s to 0.1s
		- Modular Missiles will be selected to intercept missiles if they have Engage Missiles enabled
		- Fix Modular Missiles with Orbital Guidance not hitting vessel and missile targets
		- Modular Missiles with Orbital Guidance now perform vacuum clearance maneuver (similar to HEKVs in space)

1.6.12.0
IMPROVEMENTS / FIXES
- General:
	- Fix Pwing HP scaling for large pwings being used as fuselages.
	- Fix PWing Control Surface Offset angle resetting on one side.
	- Add a time-sync logging option (with auto-enable for competitions) for logging in-game vs real-time timestamps for post-recording resynchronisation.
		- Toggle and logging interval options are available in the "Other Settings" section of the settings.
		- The timestamps are logged as compressed CSV files in the BDArmory/Logs/TimeSync folder.
	- Add Waypoint Mode Course Builder GUI tool (accessible from the Waypoints Section of the vessel Spawner GUI) for easy construction of custom waypoint courses.
		- Can either manually construct course from scratch or record a course as you manually pilot a craft along the course path. Courses/gates on loaded courses can be deleted via right-click.